# polygon_dqn

./: .gitignore  README.md  agent.py  app.py  environment.py  generate_paths.py  model.py  polygons copy.json  polygons.json  ray.py  renderer.py  requirements.txt  run-lin.sh  run-mac.sh  run.sh  tb.py
generated_paths/: model_117.json  model_120.json  model_3.json  model_4.json
logs/model_test_3/: events.out.tfevents.1603807636.MBPsomtorMagnus.26426.5.v2  events.out.tfevents.1603809227.MBPsomtorMagnus.27431.5.v2  events.out.tfevents.1603809288.MBPsomtorMagnus.27526.5.v2  events.out.tfevents.1603809505.MBPsomtorMagnus.27630.5.v2  events.out.tfevents.1603809724.MBPsomtorMagnus.27747.5.v2  events.out.tfevents.1603809920.MBPsomtorMagnus.27850.5.v2  events.out.tfevents.1603809934.MBPsomtorMagnus.27900.5.v2  events.out.tfevents.1603810373.MBPsomtorMagnus.28042.5.v2  events.out.tfevents.1603810588.MBPsomtorMagnus.28120.5.v2  events.out.tfevents.1603820948.MBPsomtorMagnus.28641.5.v2  events.out.tfevents.1603820993.MBPsomtorMagnus.28701.5.v2  events.out.tfevents.1603823575.MBPsomtorMagnus.29162.5.v2
logs/model_test_6/: events.out.tfevents.1603876468.MBPsomtorMagnus.32541.5.v2
logs/model_test_7/: events.out.tfevents.1603915721.MBPsomtorMagnus.35149.5.v2  events.out.tfevents.1603962961.MacBook-Pro-som-tillhor-Magnus.local.36708.5.v2  events.out.tfevents.1603963107.MacBook-Pro-som-tillhor-Magnus.local.36796.5.v2  events.out.tfevents.1603965281.MacBook-Pro-som-tillhor-Magnus.local.37303.5.v2  events.out.tfevents.1603965543.MacBook-Pro-som-tillhor-Magnus.local.37489.5.v2  events.out.tfevents.1603965570.MacBook-Pro-som-tillhor-Magnus.local.37553.5.v2  events.out.tfevents.1603965622.MacBook-Pro-som-tillhor-Magnus.local.37619.5.v2  events.out.tfevents.1603965646.MacBook-Pro-som-tillhor-Magnus.local.37677.5.v2  events.out.tfevents.1603965813.MacBook-Pro-som-tillhor-Magnus.local.37785.5.v2  events.out.tfevents.1603965857.MacBook-Pro-som-tillhor-Magnus.local.37854.5.v2  events.out.tfevents.1603965929.MacBook-Pro-som-tillhor-Magnus.local.37912.5.v2  events.out.tfevents.1603965991.MacBook-Pro-som-tillhor-Magnus.local.38005.5.v2  events.out.tfevents.1603966202.MacBook-Pro-som-tillhor-Magnus.local.38133.5.v2  events.out.tfevents.1603966472.MacBook-Pro-som-tillhor-Magnus.local.38315.5.v2  events.out.tfevents.1603966555.MacBook-Pro-som-tillhor-Magnus.local.38443.5.v2  events.out.tfevents.1603966613.MacBook-Pro-som-tillhor-Magnus.local.38530.5.v2  events.out.tfevents.1603966677.MacBook-Pro-som-tillhor-Magnus.local.38603.5.v2
models/model_test_225_best/: saved_model.pb
models/model_test_225_latest/: saved_model.pb
sandbox/: Cargo.toml
sandbox/data/: exp1.json  gavle.json  polygons.json  polygons2.json  simple.json  simulation-buildnings.json
sandbox/sandbox/: Cargo.toml
sandbox/sandbox/src/: agent.rs  env.rs  lib.rs  ray.rs  state_transition.rs  utils.rs
sandbox/sandbox_py/: Cargo.toml
sandbox/sandbox_py/src/: env.rs  lib.rs
(+9 files in other folders)
