[package]
name = "sandbox"
version = "0.1.0"
authors = ["Andreas Franzén <andreas@devil.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sandbox"

[dependencies]
geo = "0.14.2"
geojson = { version = "0.19.0", features=["geo-types"] }
line_intersection = { path = "../line_intersection"}
rand = "*"