[package]
name = "sandbox"
version = "0.1.0"
authors = ["Andreas Franzén <andreas@devil.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sandbox"

[[bin]]
name = "bin"
path = "bin/bin.rs"

[dependencies]
geo = "0.14.2"
geojson = { version = "0.19.0", features=["geo-types"] }
line_intersection = { path = "../line_intersection"}
rand = "*"
rayon = "*"
tch = "*"

#[dependencies.pyo3]
#version = "*"
#[features]
#extension-module = ["pyo3/extension-module"]
#default = ["extension-module"]