[package]
name = "sandbox_py"
version = "0.1.0"
authors = ["Andreas Franzén <andreas@devil.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sandbox_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.12.1"
[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
sandbox = { path = "../sandbox" }